--- a/templates/n_base.html
+++ b/templates/n_base.html
@@ -3,34 +3,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="google-site-verification" content="RAskX0UNOnUGX4OiXn7jalIRZj-SwZej5FRKUlBHEnM" />
   <title>Python.ru{% block title %} {% endblock %}</title>
   {% if request.path == "/" %}
-    <meta property="og:url" content="{{ request.get_host }}">
-    <meta property="og:image" content="{{ request.get_host }}{% static "images/python_ru_social_thumb.png" %}" />
-    <meta property="og:title" content="python.ru" />
-    <meta property="og:description" content="python.ru русскоязычное сообщество языка python" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="python.ru">
+      <meta property="og:url" content="{{ request.get_host }}">
+      <meta property="og:image" content="{{ request.get_host }}{% static "images/python_ru_social_thumb.png" %}" />
+      <meta property="og:title" content="python.ru" />
+      <meta property="og:description" content="python.ru русскоязычное сообщество языка python" />
+      <meta property="og:type" content="website" />
+      <meta property="og:site_name" content="python.ru">
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+      </style>
   {% else %}
     {% block head %}
 
     {% endblock %}
   {% endif %}
 
-    
-  <link media="all" rel="stylesheet" href="{% static "css/all.css" %}" />
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+
   <link rel="apple-touch-icon" sizes="180x180" href="{% static "favicons/apple-touch-icon.png" %}">
   <link rel="icon" type="image/png" href="{% static "favicons/favicon-32x32.png" %}" sizes="32x32">
   <link rel="icon" type="image/png" href="{% static "favicons/favicon-16x16.png" %}" sizes="16x16">
   <link rel="manifest" href="{% static "favicons/manifest.json" %}">
   <link rel="mask-icon" href="{% static "favicons/safari-pinned-tab.svg" %}" color="#5bbad5">
-  <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/default.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
   <meta name="theme-color" content="#ffffff">
 
     
@@ -53,9 +53,6 @@
       {% include 'blocks/n_footer.html' %}
     </div>
   </div>
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script type="text/javascript" src="{% static "js/masonry.pkgd.min.js" %}"></script>
-  <script type="text/javascript" src="{% static "js/jquery.main.js" %}"></script>
   {% include 'blocks/analytics.html' %}
   {% block extra_js %}{% endblock %}
 </body>
