New Dockerfile and github action for deploy

--- a/python_ru/templates/blocks/footer.html
+++ b/python_ru/templates/blocks/footer.html
@@ -10,6 +10,6 @@
       {% endfor %}
     </ul>
     <!-- copyright -->
-    <p class="copyright">&copy; 2016 <a href="https://python.ru">Python.ru</a></p>
+    <p class="copyright">&copy; 2016-2020 <a href="https://python.ru">Python.ru</a></p>
   </div>
 </footer>
