--- a/templates/blocks/header_block.html
+++ b/templates/blocks/header_block.html
@@ -19,13 +19,13 @@
                     <div class="main_menu">
                         <ul class="nav">
                             <li class="active">
-                                <a href="./main.html">Главная</a>
+                                <a href="/">Главная</a>
                             </li>
                             <li class="">
-                                <a href="blog.html">Блог</a>
+                                <a href="/blog">Блог</a>
                             </li>
                             <li class="">
-                                <a href="events.html">Мероприятия</a>
+                                <a href="/events">Мероприятия</a>
                             </li>
                         </ul>
                     </div>
