--- a/templates/index.html
+++ b/templates/index.html
@@ -1,122 +1,12 @@
+{% extends 'base.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{% static "/css/layout.css" %}">
-</head>
-<body class="loading">
-<!--HEADER START-->
-{% include 'blocks/header_block.html' %}
-<!--HEADER END-->
+
+{% block page %}
 <!--SECTION PROJECTS START-->
-<section class="projects_wrapper">
-    <div class="projects_list">
-        <div class="project_item learn_python">
-            <h6>Наш проект</h6>
-            <div class="logo">
-                <a href="">
-                    <p class="logo_title">
-                        <span class="blue">L</span>EARN <span class="yellow">P</span>YTHON
-                    </p>
-                </a>
-            </div>
-            <h4>
-                Курс программирования
-                на Python 3.8 для любого уровня
-                с упором на практику
-            </h4>
-            <p class="date">
-                <span>[</span>5 — 7 ноября 2020<span>]</span>
-            </p>
-            <p class="descr">Место для краткого описания</p>
-        </div>
-        <div class="project_item python_week">
-            <h6>Наш проект</h6>
-            <div class="logo">
-                <a href="#">
-                    <img src="{% static "/img/python_week.png" %}" alt="logo">
-                </a>
-            </div>
-            <h4>
-                Профессиональная
-                конференция для Python
-                разработчиков
-            </h4>
-            <p class="date">
-                14 — 18 сентября 2020
-            </p>
-            <p class="descr">Место для краткого описания</p>
-        </div>
-        <div class="project_item moscow_python">
-            <h6>Наш проект</h6>
-            <div class="logo">
-                <a href="#">
-                    <img src="{% static "/img/moscow_python.png" %}" alt="logo">
-                </a>
-            </div>
-            <h4>
-                Подкаст о Python. Актуальные события мира IT, тренды, подходы и тд.
-            </h4>
-            <p class="date">
-                Каждую неделю
-            </p>
-            <p class="descr">Место для краткого описания</p>
-        </div>
-    </div>
-</section>
+{% include 'blocks/our_projects.html' %}
 <!--SECTION PROJECTS END-->
 <!--SECTION DISTRIBUTION FORM START-->
-<section class="distribution_form_wrapper">
-    <div class="container">
-        <div class="distribution">
-            <div class="distribution_form">
-                <div class="distribution_item">
-                    <img src="{% static "/img/emaillove.png" %}" alt="email">
-                </div>
-                <div class="distribution_item">
-                    <div class="form_wrapper">
-                        <p class="title">
-                            Подпишитесь на рассылку с последними
-                            новостями от PythonRu <span>, причем без спама</span>
-                        </p>
-                         <!-- subscribe form -->
-                        <form class="subscribe-form"
-                              action="//moscowpython.us10.list-manage.com/subscribe/post?u=c697064155714e24c8be7e9d8&amp;id=486b0715ab"
-                              id="mc-embedded-subscribe-form"
-                              method="post" target="_blank">
-
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                <input type="text" name="b_c697064155714e24c8be7e9d8_486b0715ab" tabindex="-1" value="">
-                            </div>
-
-                            <div class="forma">
-                                <input name="EMAIL" type="email" placeholder="Hello@Python.ru" required>
-                                <button type="submit" class="btn_distr">подписаться</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+{% include 'blocks/distribution_from_email.html' %}
 <!--SECTION DISTRIBUTION FORM END-->
 <!--SECTION POSTS START-->
 {% include 'blocks/posts_block.html' %}
@@ -125,12 +15,4 @@
 <!--SECTION EVENTS START-->
 {% include 'blocks/events_block.html' %}
 <!--SECTION EVENTS END-->
-<!--FOOTER START-->
-{% include 'blocks/footer_block.html' %}
-<!--FOOTER END-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-<script src="{% static "/js/script.js" %}"></script>
-</body>
-</html>
+{% endblock %}
